--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@ layout: default
      <h4 class="text-center"> <b>Complex Data Reasoning and Analysis (CoRAL) Lab at Arizona State University</b></h4><br>
     
     </p>
-<p>
-<h4>Directed by <i><a href="https://scholar.google.com/citations?user=Bs5H0S4AAAAJ&hl=en" target="_blank">Prof. Vivek Gupta</a></i></h4>
-</p>
+    <p>
+      <span style="font-size: 1.7em; font-weight: bold;">Directed by: </span> 
+      <i><a href="https://vgupta123.github.io/" target="_blank" style="font-size: 1.5em; font-weight: 300;">Dr. Vivek Gupta</a></i>
+    </p>
+
+
 
 <p>
   At the <b>CoRAL Lab</b>, we are at the forefront of integrating cutting-edge AI technologies across natural language processing, computer vision, machine learning, and artificial intelligence. Our mission is to develop advanced AI systems that excel in reasoning, controllability, and reliability, with a particular focus on navigating complex and structured data.
