--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <header class="masthead">
     <img
       class="img-responsive center-block"
-      src="/images/logo/brickyard.png"
+      src="/images/logo/banner.png"
       width="100%"
       height="100%"
     />
